syntax = "proto3";
 
option go_package = "github.com/hi20160616/yt_fetcher/api/yt_fetcher/api";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package yt_fetcher.api;

import "google/protobuf/timestamp.proto";

// Youtube fetch service, no need youtube api key.
service YoutubeFetcher{
  // Get videoIds from a youtube video list page
  rpc GetVideoIds(Channel) returns (Channel) {}
  // Get videos info by page url set in channel
  rpc GetVideos(Channel) returns (Videos){}
  // Get video info by videoId
  rpc GetVideo(Video) returns (Video){}
}

message Channel{
  string url = 1; // just a youtube page link conclude video
  string name = 2;
  repeated string videoIds = 3;
}

message Video{
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message Videos{
  repeated Video videos = 1;
}
